--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -27,6 +27,8 @@
 	--dark-grey2: #242424;
 
 	accent-color: var(--main-color);
+
+	--red: #ff005c;
 }
 
 // 모든 요소
@@ -57,6 +59,7 @@ a {
 	width: 375px;
 	margin: 0 auto;
 }
+
 
 .wrap {
 	padding: 0 20px;
@@ -210,21 +213,28 @@ header {
 	width: 375px;
 	height: 77px;
 	background-color: #fff;
-	border-top: 1px solid #eeeeee;
+	border-top: 1px solid var(--light-grey2);
 	box-sizing: border-box;
+	border-top-left-radius: 16px;
+	border-top-right-radius: 16px;
+	padding: 5px 10px;
 
 	li {
 		width: 25%;
+		padding: 7px;
+		border-radius: 16px;
 
 		a {
 			display: block;
 			width: 100%;
 			height: 100%;
+
 			display: flex;
 			text-align: center;
+
 			flex-direction: column;
 			align-content: center;
-			justify-content: center;
+			justify-content: space-between;
 
 			p {
 				font-size: 12px;
@@ -232,6 +242,10 @@ header {
 				color: #cccccc;
 			}
 		}
+	}
+
+	.on {
+		background-color: #e8fffd;
 	}
 }
 
@@ -264,5 +278,35 @@ input[type="checkbox"] {
 		background-color: #fff;
 		border-radius: 2px;
 		background: url("../assets/icons/Checkbox.png");
+	}
+}
+
+// textbox 오류 날 때
+.err-textbox {
+	border: 1px solid palevioletred;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 5px;
+
+	input {
+		border: 1px solid var(--red);
+		width: 100%;
+	}
+
+	.err-textbox-txt {
+		border: 1px solid gold;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 8px;
+
+		span {
+			font-weight: 500;
+			font-size: 16px;
+			letter-spacing: -0.5%;
+			line-height: 21.6px;
+			color: var(--red);
+		}
 	}
 }
