--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,8 @@
 @import "personal-info-01.scss";
 @import "personal-info-02.scss";
 @import "home.scss";
+@import "search.scss";
+@import "search-result.scss";
 
 #splash {
 	.content {
