--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -60,10 +60,10 @@ a {
 	margin: 0 auto;
 }
 
-
 .wrap {
 	padding: 0 20px;
 	box-sizing: border-box;
+	//border: 1px solid cornflowerblue;
 }
 
 .hidden {
@@ -79,6 +79,7 @@ a {
 .con {
 	.wrap {
 		padding-top: 20px;
+		//border: 1px solid cornflowerblue;
 	}
 }
 
@@ -278,6 +279,64 @@ input[type="checkbox"] {
 		background-color: #fff;
 		border-radius: 2px;
 		background: url("../assets/icons/Checkbox.png");
+	}
+}
+
+input[type="radio"] {
+	display: none;
+
+	&:checked + .check_style2::after,
+	&:checked + .check_style3::after {
+		background-color: #fff;
+		border-radius: 2px;
+		opacity: 1;
+	}
+}
+
+// 남성
+.check_style2 {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+	position: relative;
+	font-size: 16px;
+	flex-direction: column;
+
+	&::after {
+		content: "";
+		display: inline-block;
+		background-color: #fff;
+		border-radius: 2px;
+		background: url("../assets/icons/남성.png");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: auto;
+		width: 62px;
+		height: 62px;
+		opacity: 0.5;
+	}
+}
+
+// 여성
+.check_style3 {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+	position: relative;
+	font-size: 16px;
+
+	&::after {
+		content: "";
+		display: inline-block;
+		background-color: #fff;
+		border-radius: 2px;
+		background: url("../assets/icons/여성.png");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: auto;
+		width: 62px;
+		height: 62px;
+		opacity: 0.5;
 	}
 }
 
