--- a/css/style.css
+++ b/css/style.css
@@ -1536,6 +1536,10 @@ input[type=radio]:checked + .check_style2::after, input[type=radio]:checked + .c
   font-weight: 500;
   color: var(--main-color);
 }
+.con .wrap .personal-info .personal-infomation .gender .gender-select .gender-click .check_style2::after,
+.con .wrap .personal-info .personal-infomation .gender .gender-select .gender-click .check_style3::after {
+  opacity: 1;
+}
 
 .con .wrap {
   padding: 0px 0px 0px;
@@ -2239,6 +2243,102 @@ input[type=radio]:checked + .check_style2::after, input[type=radio]:checked + .c
   font-size: 14px;
   font-weight: 500;
   color: var(--grey2);
+}
+
+.search-img .wrap {
+  border: 1px solid red;
+  background-image: url(../assets/icons/search-img.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.search-img .wrap .shot-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 100px;
+}
+.search-img .wrap .shot-button button {
+  border: 8px solid var(--main-color);
+  background-color: #fff;
+  width: 68px;
+  height: 68px;
+  border-radius: 50%;
+}
+.search-img .wrap .overlap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7) fixed;
+  z-index: 25;
+}
+.search-img .wrap .overlap .inner {
+  width: 375px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: -80px;
+}
+.search-img .wrap .overlap .inner img {
+  position: relative;
+  top: 80px;
+}
+.search-img .wrap .overlap .inner .txt {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+  padding: 100px 30px 30px;
+  border: 1px solid var(--main-color);
+  border-radius: 12px;
+}
+.search-img .wrap .overlap .inner .txt p {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: -0.5%;
+  color: var(--Dark-Grey-1);
+}
+.search-img .wrap .overlap .inner .txt span {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21.6px;
+  letter-spacing: -0.5%;
+  color: var(--grey3);
+  margin-bottom: 20px;
+}
+.search-img .wrap .overlap .inner .txt button {
+  width: 100%;
+  background-color: var(--main-color);
+  color: #fff;
+  width: 100%;
+  padding: 10px 36px;
+  border-radius: 16px;
+  margin-bottom: 0px;
+  border: 1px solid transparent;
+  font-family: var(--main-font-family);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: -0.08px;
+  text-align: center;
 }
 
 #splash .content {
