--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import "join-completed.scss";
 @import "find-email.scss";
 @import "find-pw.scss";
+@import "pw-reset.scss";
 @import "main.scss";
 @import "authority.scss";
 @import "personal-info-01.scss";
@@ -14,6 +15,7 @@
 @import "search.scss";
 @import "search-result.scss";
 @import "search-img.scss";
+@import "search-img-result.scss";
 
 #splash {
 	.content {
