--- a/scss/_search-img.scss
+++ b/scss/_search-img.scss
@@ -1,111 +1,402 @@
-.search-img {
+.search {
+	position: relative;
+
 	.wrap {
-		border: 1px solid red;
-		background-image: url(../assets/icons/search-img.png);
-		background-repeat: no-repeat;
-		background-position: center;
+		padding: 20px 20px 0px;
 		position: relative;
+		height: 100vh;
 
-		display: flex;
-		justify-content: center;
-		align-items: flex-end;
-
-		.shot-button {
+		.search-content {
 			display: flex;
-			justify-content: center;
-			align-items: center;
-			position: absolute;
-			bottom: 100px;
+			flex-direction: column;
+			gap: 40px;
+			overflow-x: hidden;
 
-			button {
-				border: 8px solid var(--main-color);
-				background-color: #fff;
-				width: 68px;
-				height: 68px;
-				border-radius: 50%;
+			.search-bar {
+				display: flex;
+				align-items: center;
+				position: relative;
+
+				input {
+					width: 100%;
+					background-color: var(--bg_g);
+					border-radius: 16px;
+					padding: 16px 20px;
+					color: var(--grey1);
+					border: 1px solid transparent;
+				}
+
+				img {
+					position: absolute;
+					right: 20px;
+				}
+			}
+
+			.health-search {
+				display: flex;
+				flex-direction: column;
+				gap: 5px;
+
+				.health-search-title {
+					p {
+						font-size: 16px;
+						font-weight: 700;
+						line-height: 21.6px;
+						letter-spacing: -0.5%;
+					}
+				}
+
+				ul {
+					display: flex;
+					width: 100%;
+					overflow-x: hidden;
+
+					li {
+						border: 1px solid #f2f4f6;
+						width: 25%;
+
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						align-items: center;
+
+						flex: 0 0 auto;
+
+						position: relative;
+
+						width: 60px;
+						height: 60px;
+
+						.img {
+							img {
+								&:nth-child(2) {
+									position: absolute;
+									right: 3px;
+								}
+							}
+						}
+
+						p {
+							font-weight: 500;
+							font-size: 12px;
+							line-height: 16px;
+							letter-spacing: -0.5%;
+							text-align: center;
+						}
+
+						&:nth-child(1) {
+							gap: 6px;
+						}
+					}
+				}
+			}
+
+			.recent-view {
+				display: flex;
+				flex-direction: column;
+				gap: 15px;
+
+				.recent-view-title {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+
+					p {
+						font-size: 16px;
+						font-weight: 700;
+						line-height: 21.6px;
+						letter-spacing: -0.5%;
+
+						&:last-child {
+							font-weight: 500;
+							font-size: 12px;
+							line-height: 15.6px;
+							letter-spacing: -0.5%;
+							color: var((--grey1));
+						}
+					}
+				}
+
+				ul {
+					display: flex;
+					align-items: center;
+					gap: 10px;
+
+					li {
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						align-items: center;
+						gap: 15px;
+
+						.img {
+							width: 100px;
+							height: 100px;
+							background-color: #f2f4f6;
+							position: relative;
+
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							border-radius: 12px;
+						}
+
+						.txt {
+							display: flex;
+							flex-direction: column;
+							align-items: center;
+							gap: 5px;
+
+							p {
+								font-weight: 500;
+								font-size: 12px;
+								line-height: 15.6px;
+								letter-spacing: -0.5%;
+								color: var(--grey2);
+
+								&:last-child {
+									font-weight: 700;
+									font-size: 14px;
+									line-height: 18.9px;
+									letter-spacing: -0.5%;
+									color: var(--dark-grey1);
+								}
+							}
+						}
+					}
+				}
+			}
+
+			.popular-word {
+				display: flex;
+				flex-direction: column;
+				gap: 15px;
+
+				.popular-word-title {
+					display: flex;
+					align-items: center;
+					gap: 10px;
+
+					p {
+						font-size: 16px;
+						font-weight: 700;
+						line-height: 21.6px;
+						letter-spacing: -0.5%;
+
+						&:last-child {
+							font-weight: 500;
+							font-size: 12px;
+							line-height: 15.6px;
+							letter-spacing: -0.5%;
+							color: var((--grey1));
+						}
+					}
+				}
+
+				.popular-word-ranking {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+
+					gap: 10%;
+
+					.ranking-left,
+					.ranking-right {
+						width: 50%;
+						display: flex;
+						flex-direction: column;
+						gap: 20px;
+
+						.ranking-box {
+							display: flex;
+							justify-content: space-between;
+							align-items: center;
+							width: 100%;
+
+							.ranking-box-txt {
+								display: flex;
+								justify-content: flex-start;
+								align-items: center;
+								width: 80%;
+								gap: 15px;
+
+								p {
+									font-weight: 700;
+									font-size: 14px;
+									line-height: 18.9px;
+									letter-spacing: -0.5%;
+									width: 10%;
+
+									&:last-child {
+										font-weight: 500;
+										font-size: 12px;
+										line-height: 15.6px;
+										width: 90%;
+									}
+								}
+							}
+
+							.ranking-box-icon {
+								width: 20%;
+								display: flex;
+								justify-content: center;
+								align-items: center;
+							}
+						}
+					}
+				}
 			}
 		}
 
-		.overlap {
+		.search-overlay {
+			position: fixed; /* 또는 absolute, 상황에 따라 다름 */
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: rgba(0, 0, 0, 0.8);
+			z-index: 10; /* search-select보다 낮은 값으로 설정 */
+		}
+
+		.search-select {
+			position: fixed;
+			left: 50%;
+			transform: translate(-50%, 0);
+			bottom: 0;
+
+			z-index: 30;
+
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+
+			gap: 10px;
+
+			width: 375px;
+			border-top-right-radius: 28px;
+			border-top-left-radius: 28px;
+
+			padding: 20px 20px 30px;
+			background: #fff;
+
+			.icon {
+				width: 100%;
+				display: flex;
+				justify-content: flex-start;
+				align-items: center;
+			}
+
+			.txt {
+				display: flex;
+				flex-direction: column;
+				gap: 20px;
+				width: 100%;
+				padding: 20px 0px;
+
+				.camera,
+				.album,
+				.file {
+					border-bottom: 1px solid var(--bg);
+					padding: 0px 0px 15px 0px;
+
+					p {
+						font-weight: 500;
+						font-size: 14px;
+						color: var(--grey4);
+					}
+				}
+
+				.camera {
+					display: flex;
+					flex-direction: column;
+					gap: 5px;
+
+					p {
+						&:last-child {
+							color: #ef3d3d;
+							font-weight: 500;
+							font-size: 12px;
+						}
+					}
+				}
+			}
+		}
+
+		.fail {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-
-			position: absolute;
-			top: 20%;
-
-			width: 100%;
 
 			position: fixed;
 			top: 0;
 			left: 0;
 			width: 100vw;
 			height: 100vh;
-			background: rgba(0, 0, 0, 0.7) fixed;
 			z-index: 25;
+			.icon {
+				position: relative;
+				top: 80px;
+			}
 
-			.inner {
-				width: 375px;
+			.txt-box {
+				background-color: #fff;
+				border-radius: 12px;
+
+				padding: 100px 30px 30px;
+
 				display: flex;
 				flex-direction: column;
+				justify-content: center;
 				align-items: center;
-				position: relative;
-				top: -80px;
+				gap: 20px;
 
-				img {
-					position: relative;
-					top: 80px;
-				}
-
-				.txt {
-					background-color: #fff;
+				.title {
 					display: flex;
 					flex-direction: column;
-					align-items: center;
 					justify-content: center;
-					gap: 20px;
-					width: 100%;
-					padding: 100px 30px 30px;
-					border: 1px solid var(--main-color);
-					border-radius: 12px;
+					align-items: center;
 
 					p {
 						font-weight: 700;
 						font-size: 20px;
-						line-height: 28px;
-						letter-spacing: -0.5%;
-						color: var(--Dark-Grey-1);
+						color: var(--dark-grey1);
 					}
+				}
 
-					span {
+				.txt {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					gap: 5px;
+
+					p {
 						font-weight: 500;
 						font-size: 16px;
-						line-height: 21.6px;
-						letter-spacing: -0.5%;
 						color: var(--grey3);
-						margin-bottom: 20px;
 					}
+				}
+
+				.button {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					gap: 10px;
 
 					button {
+						border-radius: 12px;
+						padding: 10px 100px;
 						width: 100%;
-
-						background-color: var(--main-color);
+						border: 1px solid transparent;
+						background-color: var(--light-grey2);
 						color: #fff;
 
-						width: 100%;
-						padding: 10px 36px;
-						border-radius: 16px;
-
-						margin-bottom: 0px;
-
-						border: 1px solid transparent;
-						font-family: var(--main-font-family);
-						font-size: 16px;
-						font-weight: 700;
-						line-height: 24px;
-						letter-spacing: -0.08px;
-						text-align: center;
+						&:first-child {
+							background-color: var(--main-color);
+							color: #fff;
+						}
 					}
 				}
 			}
