--- a/scss/_find-pw-02.scss
+++ b/scss/_find-pw-02.scss
@@ -1,6 +1,12 @@
+header {
+	.wrap {
+		padding: 0px;
+	}
+}
+
 .con {
 	.wrap {
-		.find-pw {
+		.find-pw-02 {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -109,7 +115,6 @@
 				z-index: 13;
 
 				.inner {
-					width: 375px;
 					display: flex;
 					flex-direction: column;
 					align-items: center;
@@ -121,33 +126,45 @@
 						top: 80px;
 					}
 
-					.txt {
+					.txt-box {
 						background-color: #fff;
 						display: flex;
 						flex-direction: column;
 						align-items: center;
 						justify-content: center;
-						gap: 20px;
-						width: 100%;
-						padding: 100px 30px 30px;
-						border: 1px solid var(--main-color);
-						border-radius: 12px;
+						gap: 30px;
 
-						p {
-							font-weight: 700;
-							font-size: 20px;
-							line-height: 28px;
-							letter-spacing: -0.5%;
-							color: var(--Dark-Grey-1);
+						width: 100%;
+						border-radius: 12px;
+						padding: 100px 30px 40px;
+
+						.txt-title {
+							padding: 0;
+
+							p {
+								font-weight: 700;
+								font-size: 20px;
+								line-height: 28px;
+								letter-spacing: -0.5%;
+								color: var(--Dark-Grey-1);
+							}
 						}
 
-						span {
-							font-weight: 500;
-							font-size: 16px;
-							line-height: 21.6px;
-							letter-spacing: -0.5%;
-							color: var(--grey3);
-							margin-bottom: 20px;
+						.txt {
+							padding: 0;
+							display: flex;
+							flex-direction: column;
+							gap: 5px;
+							border: 1px solid transparent;
+
+							span {
+								margin: 0;
+								font-weight: 500;
+								font-size: 16px;
+								line-height: 21.6px;
+								letter-spacing: -0.5%;
+								color: var(--grey3);
+							}
 						}
 
 						button {
