--- a/scss/_search-img-result.scss
+++ b/scss/_search-img-result.scss
@@ -1,11 +1,11 @@
-.con {
+.search-img-result {
 	position: relative;
 
 	.wrap {
 		padding: 20px 20px 0px;
 		height: 100vh;
 
-		.search-img-result {
+		.search-img-result-content {
 			display: flex;
 			flex-direction: column;
 
