--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,8 @@
 @import "join.scss";
 @import "join-completed.scss";
 @import "find-email.scss";
-@import "find-pw.scss";
+@import "find-pw-01.scss";
+@import "find-pw-02.scss";
 @import "pw-reset.scss";
 @import "main.scss";
 @import "authority.scss";
@@ -16,6 +17,7 @@
 @import "search-result.scss";
 @import "search-img.scss";
 @import "search-img-result.scss";
+@import "_product-description.scss";
 
 #splash {
 	.content {
